--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import Header from "../components/Header.astro";
 import Hero from "../components/Hero.astro";
 import About from "../components/About.astro";
 import Products from "../components/Products.astro";
+import Talks from "../components/Talks.astro";
+import Gallery from "../components/Gallery.astro";
 ---
 
 <html lang="en">
@@ -18,6 +20,8 @@ import Products from "../components/Products.astro";
 		<Header />
 		<Hero />
 		<About />
-		<Products/>
+		<Products />
+		<Talks />
+		<Gallery />
 	</body>
 </html>
