--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,12 +6,13 @@ import About from "../components/About.astro";
 import Products from "../components/Products.astro";
 import Talks from "../components/Talks.astro";
 import Gallery from "../components/Gallery.astro";
+import Contact from "../components/Contact.astro";
 ---
 
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
@@ -23,5 +24,6 @@ import Gallery from "../components/Gallery.astro";
 		<Products />
 		<Talks />
 		<Gallery />
+		<Contact />
 	</body>
 </html>
