--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Products from "../components/Products.astro";
 import Talks from "../components/Talks.astro";
 import Gallery from "../components/Gallery.astro";
 import Contact from "../components/Contact.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="en">
@@ -25,5 +26,6 @@ import Contact from "../components/Contact.astro";
 		<Talks />
 		<Gallery />
 		<Contact />
+		<Footer />
 	</body>
 </html>
