--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import About from "../components/About.astro";
 import Products from "../components/Products.astro";
 import Talks from "../components/Talks.astro";
 import Gallery from "../components/Gallery.astro";
+import Location from "../components/Location.astro";
 import Contact from "../components/Contact.astro";
 import Footer from "../components/Footer.astro";
 ---
@@ -25,6 +26,7 @@ import Footer from "../components/Footer.astro";
 		<Products />
 		<Talks />
 		<Gallery />
+		<Location />
 		<Contact />
 		<Footer />
 	</body>
