feat: add custom 404 page with animated bee and Quacker font

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -26,9 +26,9 @@
     >
         <div class="w-full order-1 md:order-1">
             <img
-                src="/photos/equipo_apicultores.jpg"
+                src="/photos/famillyStory.jpg"
                 alt="Equipo de Colmenares Chávez"
-                class="rounded-xl shadow-lg object-cover w-full h-full"
+                class="rounded-xl shadow-lg object-cover w-full h-96"
             />
         </div>
         <div class="text-left order-2 md:order-2">
@@ -54,7 +54,7 @@
     >
         <div class="w-full order-1 md:order-1">
             <img
-                src="/photos/colmenares.jpg"
+                src="/photos/trayectoria.jpg"
                 alt="Campo y colmenas"
                 class="rounded-xl shadow-lg object-cover w-full h-full"
             />
@@ -80,9 +80,9 @@
     >
         <div class="w-full order-1 md:order-1">
             <img
-                src="/photos/extraccion_miel.jpg"
+                src="/photos/pasion.jpg"
                 alt="Tecnología apícola"
-                class="rounded-xl shadow-lg object-cover w-full h-full"
+                class="rounded-xl shadow-lg object-cover w-full h-96"
             />
         </div>
         <div class="text-left order-2 md:order-2">
