--- a/src/components/Talks.astro
+++ b/src/components/Talks.astro
@@ -30,16 +30,20 @@
                 Inspira con Nuestras Charlas
             </h2>
             <p class="text-md md:text-lg mb-6 text-mediumBrown">
-                Acércate al mundo de las abejas con nuestras charlas educativas.
-                Compartimos historias, curiosidades y experiencias de la
-                apicultura para toda la familia. Contáctanos y vive la próxima
-                experiencia con nosotros.
+                Descubre el fascinante mundo de las abejas a través de
+                experiencias educativas llenas de aprendizaje y conexión con la
+                naturaleza. Ven y comparte con nosotros la magia de la
+                apicultura familiar.
             </p>
+
+            <!-- Botón WhatsApp -->
             <a
-                href="/contact"
+                href="https://wa.me/569XXXXXXXXX?text=Hola!%20Me%20interesa%20agendar%20una%20charla%20educativa%20con%20Colmenares%20Ch%C3%A1vez."
+                target="_blank"
+                rel="noopener noreferrer"
                 class="px-6 py-3 bg-yellowLight hover:bg-darkBrown hover:text-yellowLight text-darkBrown font-semibold rounded-lg shadow hover:shadow-md transition duration-1000"
             >
-                Contáctanos para hacer una charla
+                Agendar una charla
             </a>
         </div>
     </div>
