--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Footer from "../components/Footer.astro";
 		<link rel="icon" type="image/svg+xml" href="" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Colmenares Chavez</title>
 	</head>
 	<body>
 		<Header />
