--- a/src/components/Talks.astro
+++ b/src/components/Talks.astro
@@ -27,13 +27,16 @@
             <h2
                 class="talks_tittle text-3xl md:text-6xl font-bold mb-4 text-darkBrown"
             >
-                Inspira con Nuestras Charlas
+                Charlas y experiencia de apicultura
             </h2>
             <p class="text-md md:text-lg mb-6 text-mediumBrown">
-                Descubre el fascinante mundo de las abejas a través de
-                experiencias educativas llenas de aprendizaje y conexión con la
-                naturaleza. Ven y comparte con nosotros la magia de la
-                apicultura familiar.
+                Realizamos charlas educativas y visitas guiadas para colegios,
+                delegaciones y grupos interesados en conocer más sobre el mundo
+                de las abejas. Con un enfoque ambiental, buscamos generar
+                conciencia sobre la importancia de las abejas en los ecosistemas
+                y la polinización. La experiencia incluye una explicación
+                técnica del trabajo apícola y finaliza con una degustación de
+                miel del Valle de Putaendo.
             </p>
 
             <!-- Botón WhatsApp -->
