--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -43,9 +43,9 @@
             <p
                 class="span_miel mt-4 text-lg md:text-2xl text-cream drop-shadow-md"
             >
-                Miel 100% natural, directo desde <span class="font-bold"
-                    >Putaendo, valle del Aconcagua</span
-                >
+                Productos apícolas naturales del <span class="font-bold"
+                    >Valle de Putaendo</span
+                >, elaborados con dedicación y respeto por la naturaleza.
             </p>
         </p>
 
