--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Products from "../components/Products.astro";
 import Talks from "../components/Talks.astro";
 import Gallery from "../components/Gallery.astro";
 import Location from "../components/Location.astro";
+import Testimonials from "../components/Testimonials.astro";
 import Contact from "../components/Contact.astro";
 import Footer from "../components/Footer.astro";
 ---
@@ -23,10 +24,11 @@ import Footer from "../components/Footer.astro";
 		<Header />
 		<Hero />
 		<About />
-		<Products />
+		<!-- <Products /> -->
 		<Talks />
 		<Gallery />
 		<Location />
+		<Testimonials/>
 		<Contact />
 		<Footer />
 	</body>
