--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import Footer from "../components/Footer.astro";
 		<Header />
 		<Hero />
 		<About />
-		<!-- <Products /> -->
+		<Products />
 		<Talks />
 		<Gallery />
 		<Location />
